<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">博维手持终端</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log">北京博维航空设施管理有限公司</string>
    <string name="develope_company">北京恒信启华信息技术股份有限公司</string>
    <string name="company_info">Copyright © 2006-2020 www.bjhxqh.com</string>
    <string name="please_userid">用户名</string>
    <string name="please_password">密  码</string>
    <string name="remenber_pass">记住密码</string>
    <string name="login">登录</string>
    <string name="login_loging">登录中...</string>

    <!-- 记住密码 -->
    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>

    <!-- 主界面 -->
    <string name="maintenance">维保工单</string>
    <string name="serve">维修工单</string>
    <string name="service">服务工单</string>
    <string name="order_search">工单查询</string>
    <string name="order">工单管理</string>
    <string name="property">资产查询</string>
    <string name="inventory">库存查询</string>
    <string name="knowledge">知识库</string>
    <string name="download">下载</string>
    <string name="setting">设置</string>
    <string name="out">退出</string>
    <string name="order_null">无工单记录</string>
    <string name="maintenance_name">维保工单</string>
    <string name="maintenance_add_new">新建维保工单</string>
    <string name="order_qualified">合格</string>
    <string name="serve_add_new">新建维修工单</string>
    <string name="service_add_new">新建服务工单</string>
    <string name="choose_item">选择班组</string>
    <string name="item">班组</string>
    <string name="choose_all">全部员工</string>
    <string name="order_number">编号</string>
    <string name="order_describe">描述</string>
    <string name="order_date">日期</string>
    <string name="order_task">工单任务</string>
    <string name="task_list">任务列表</string>
    <string name="task">任务</string>
    <string name="digest">摘要</string>
    <string name="choose_batch">批量选择(执行人/检查人)</string>
    <string name="please_choose_task">请选择任务</string>
    <string name="real_info">实际信息</string>
    <string name="worker_info">员工信息</string>
    <string name="worker_info_add_new">员工新建</string>
    <string name="worker_info_number">员工编号</string>
    <string name="worker_info_name">名称</string>
    <string name="worker_info_start_date">开始日期</string>
    <string name="worker_info_stop_date">结束日期</string>
    <string name="worker_info_start_time">开始时间</string>
    <string name="worker_info_stop_time">结束时间</string>
    <string name="worker_info_work_time">工时</string>
    <string name="plan_material">计划物料消耗</string>
    <string name="give_material_add_new">发放物料新建</string>
    <string name="material_number">物料编号</string>
    <string name="material_name">物料名称</string>
    <string name="material_size">物料数量</string>
    <string name="real_material">实际物料消耗</string>
    <string name="consume_material_add_new">消耗物料新建</string>
    <string name="warehouse_below">所属仓库</string>
    <string name="real_info_4">捷运备件</string>
    <string name="jieyun_add_new">捷运备件新建</string>
    <string name="real_info_5">领料消耗</string>
    <string name="material_consume_add_new">领料消耗新建</string>

    <!-- 任务详情 -->
    <string name="task_title">任务详情</string>
    <string name="task_num">编号</string>
    <string name="task_digest">摘要</string>
    <string name="task_zxr">执行人</string>
    <string name="task_jcr">检查人</string>

    <!-- 工单详情 -->
    <string name="order_detail_number">工单编号</string>
    <string name="order_detail_describe">工单描述</string>
    <string name="order_detail_palce">位置</string>
    <string name="order_detail_property">资产</string>
    <string name="order_detail_worktype">工作类型</string>
    <string name="order_detail_reality_worktype">实际工作类型</string>
    <string name="order_detail_applyunit">申请单位</string>
    <string name="order_detail_major">专业</string>
    <string name="order_detail_reality_item">实际班组</string>
    <string name="order_detail_state">状态</string>
    <string name="order_detail_reportdate">汇报日期</string>
    <string name="order_detail_workplan">作业计划</string>
    <string name="order_detail_reality_starttime">实际开始时间</string>
    <string name="order_detail_reality_stoptime">实际完成时间</string>
    <string name="order_detail_employeeID">录入人工号</string>
    <string name="order_detail_questiontogether">问题汇总</string>
    <string name="order_detail_ratinghours">额定工时</string>
    <string name="order_detail_pm">PM</string>
    <string name="order_detail_notinspection_device">未巡检设备</string>
    <string name="order_detail_inspect_result">检查结果</string>
    <string name="order_detail_faultclass">故障类</string>
    <string name="order_detail_error_coding">问题代码</string>
    <string name="order_detail_fault_rank">故障等级</string>
    <string name="order_detail_phenomena">现象</string>
    <string name="order_detail_cause">原因</string>
    <string name="order_detail_remedy">措施</string>
    <string name="order_detail_reporttime">汇报时间</string>
    <string name="order_detail_starttime">开始时间</string>
    <string name="order_detail_input">提交</string>
    <string name="OK">确定</string>
    <string name="delete">删除</string>
    <string name="yuzhi">有物料消耗:预置</string>
    <string name="save">保存</string>
    <string name="company_inventory_text">公司库存</string>
    <string name="mrt_text">捷运库存</string>
    <string name="title_activity_in__company_">In_Company_Activity</string>
    <string name="company_title_text">公司库存</string>
    <string name="item_list">选项列表</string>
    <string name="request_ok">请求成功</string>
    <string name="request_fail">请求失败</string>
    <string name="client_sucess">连接服务器成功</string>
    <string name="requesting">正在获取数据...</string>
    <string name="inputing">正在提交数据</string>

    <!-- 下载页面 -->
    <string name="LOCATIONS">位置</string>
    <string name="ASSET">资产</string>
    <string name="WORKDW">单位</string>
    <string name="WORKZY">专业</string>
    <string name="WORKTYPE">工作类型</string>
    <string name="ACWORKTYPE">实际工作类型</string>
    <string name="ALNDOMAIN">故障等级</string>
    <string name="FAILURECODE">故障代码</string>
    <string name="FAILURELIST">故障代码关系</string>
    <string name="JOBPLAN">所有工作计划</string>
    <string name="JOBTASK">所有工作计划任务</string>
    <string name="JOBMATERIAL">所有工作计划物料</string>
    <string name="ERSON">工作班组</string>
    <string name="DOWNLOAD_ALL">全部下载</string>
    <string name="downloading">正在下载</string>
    <string name="downloaded">已下载</string>
    <string name="download_fail">下载失败</string>

    <!-- 知识库 -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="know_number_text">编号:</string>
    <string name="know_desc">描述:</string>
    <string name="title_activity_know_kedge_details">KnowKedgeDetailsActivity</string>
    <string name="knowkedge_details_text">知识库详情</string>
    <string name="document_path_text">文档路径:</string>
    <string name="have_not_data_text">暂无信息</string>
    <string name="loading_text">努力加载中...</string>
    <string name="document_name_text">文件名称:</string>
    <string name="know_dl">知识大类:</string>
    <string name="know_xl">知识小类:</string>
    <string name="know_bz">备注:</string>
    <string name="title_activity_search">SearchActivity</string>

    <!-- 公司库存 -->
    <string name="item_number_text">编号:</string>
    <string name="item_name_text">名称:</string>
    <string name="inventory_text">库房:</string>
    <string name="count_text">数量:</string>
    <string name="deptinventory_text">捷运库存</string>

    <!-- 二微码扫描 -->
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scanning_text">二维码扫描</string>
    <string name="title_activity_results_">Results_Activity</string>
    <string name="results_title_text">查询结果</string>
    <string name="location_text">位置:</string>
    <string name="order_type">工单类型</string>
    <string name="order_serch_type">类型</string>
    <string name="order_serch_date">时间</string>
    <string name="about_text">关于我们</string>
    <string name="update_text">版本更新</string>
    <string name="network_text">网络设置</string>
    <string name="clear_text">清除缓存</string>
    <string name="data_text">数据下载</string>
    <string name="title_activity_order_search">OrderSearchActivity</string>
    <string name="have_not_data_txt">暂无相关数据</string>
    <string name="title_activity_about_us_">About_us_Activity</string>
    <string name="about_us">关于我们</string>

    <!--关于我们-->
    <string name="about_us_text">北京恒信启华信息技术股份有限公司总部位于北京中关村软件园，并在成都、深圳设有分公司，公司成立于2006年，是国内从事资产管理信息化系统、智慧城市信息化系统专业研发、咨询和实施服务的高新技术企业。自创立之始，公司一直秉承以高端技术为起点，以创新为导向，以人才为核心的管理理念，依托于国内著名学府、聘请了高技术专业人才，建立了公司的软件研发中心，致力于自主知识产权的管理信息化系统的研究开发，先后开发了企业资产设备、企业业务流程、基建和工程项目、电厂运行和检修、智能社区服务等二十余种管理信息化软件系统并都已获得了中华人民共和国国家版权局颁发的计算机软件著作权登记证书。</string>

</resources>
