<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        android:src="@drawable/picture_ico"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/log"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">
        <EditText
            android:id="@+id/user_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@drawable/color_cursor"
            android:drawableLeft="@drawable/user_ico"
            android:hint="@string/please_userid"
            android:textColorHint="@android:color/darker_gray"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/user_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@drawable/color_cursor"
            android:drawableLeft="@drawable/password_ico"
            android:hint="@string/please_password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/darker_gray"/>


    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/isremenber_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox"
                android:text="@string/remenber_pass"
                android:textSize="14sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <Button
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_selector"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimens_10dp"
            android:orientation="vertical"
            android:layout_marginTop="70dp">
            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/develope_company"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/company_name"
                android:layout_centerHorizontal="true"
                android:text="@string/company_info"
                android:textColor="@color/white" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
