<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/order_background">

    <include layout="@layout/order_detail_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/order_detail_number"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/order_detail_number"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/content_bg02"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:paddingLeft="3dp"
            android:textSize="14dp"
            android:textCursorDrawable="@null"
            android:gravity="center_vertical"
            android:textColor="@color/gray"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/order_detail_describe"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/order_detail_describe"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="3dp"
                android:textSize="14dp"
                android:textCursorDrawable="@null"
                android:gravity="center_vertical"
                android:textColor="@color/gray"
                android:background="@drawable/content_bg01"/>
            <include layout="@layout/order_detail_one_layout"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/order_detail_state"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/order_detail_state"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="3dp"
                android:textSize="14dp"
                android:textCursorDrawable="@null"
                android:gravity="center_vertical"
                android:textColor="@color/gray"
                android:background="@drawable/content_bg01"/>
            <include layout="@layout/order_detail_two_layout"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/order_detail_questiontogether"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/order_detail_questiontogether"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="3dp"
                android:textSize="14dp"
                android:textCursorDrawable="@null"
                android:gravity="center_vertical"
                android:textColor="@color/gray"
                android:background="@drawable/content_bg01"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/order_detail_faultclass"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/order_detail_faultclass"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="3dp"
                android:textSize="14dp"
                android:textCursorDrawable="@null"
                android:gravity="center_vertical"
                android:textColor="@color/gray"
                android:background="@drawable/content_bg01"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/order_detail_error_coding"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/order_detail_error_coding"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="3dp"
                android:textSize="14dp"
                android:textCursorDrawable="@null"
                android:gravity="center_vertical"
                android:textColor="@color/gray"
                android:background="@drawable/content_bg01"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/order_detail_fault_rank"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="3dp"
                android:textSize="14dp"
                android:textCursorDrawable="@null"
                android:gravity="center_vertical"
                android:textColor="@color/gray"
                android:background="@drawable/content_bg01"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/content_bg02">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_centerVertical="true"
                    android:text="@string/order_detail_reporttime"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"/>
            </RelativeLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/order_detail_input"
                android:background="@color/start_back_color"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>