<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/order_info_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_margin="5dp"
        android:background="@drawable/content_bg02"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/task_num"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/task_num"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:background="@drawable/content_bg01"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/task_digest"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/task_digest"
            android:layout_width="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:background="@drawable/content_bg01"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/task_zxr"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/task_zxr"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/gray"
            android:background="@drawable/content_bg01"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/task_jcr"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/task_jcr"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/gray"
            android:background="@drawable/content_bg01"/>
    </LinearLayout>


</LinearLayout>