<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/order_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/chooseitem_relativelayout"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        >
        <include layout="@layout/order_info_title" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/order_layout_background"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/material_number"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/material_info_number"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/content_bg01"
                android:gravity="center_vertical"
                android:paddingLeft="3dp"
                android:textColor="@color/gray"
                android:textCursorDrawable="@null"
                android:textSize="14dp"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/material_name"
            android:textColor="@color/black" />

            <EditText
                android:id="@+id/material_info_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/content_bg01"
                android:gravity="center_vertical"
                android:paddingLeft="3dp"
                android:textColor="@color/gray"
                android:textCursorDrawable="@null"
                android:textSize="14dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/material_size"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/material_info_size"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/content_bg01"
                android:gravity="center_vertical"
                android:paddingLeft="3dp"
                android:textColor="@color/gray"
                android:textCursorDrawable="@null"
                android:textSize="14dp"
                android:inputType="number"/>
            <Button
                android:id="@+id/info_input"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:background="@color/start_back_color"
                android:text="@string/order_detail_input"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>